# trade_history

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-bank-extractor.md
.claude/memory/: MEMORY.md
.github/workflows/: ci.yml  release.yml
data/: config.json  ledger.review-final.report.json  ledger.review-fixes.report.json  ledger.review-fixes2.config.json  ledger.review-fixes2.report.json  ledger.review-names-v2.report.json  ledger.review-td.report.json  ledger.vnext.report.json
doc/: index.html  user-guide.md
docs/: index.html
example_data/: README.md
example_data/data/: ledger.sqlite  (+1 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
plan/: EXTRACTION_RECONCILIATION_REFACTOR.md  VERIFY_EXTRACTION_REFACTOR.md
prompts/: new-parser.md
schema/: ARCHITECTURE.md
scripts/: build_docs.py  build_example_data.py  create_daily_refresh_task.ps1  db_failed.py  db_failures.py  db_summary.py  debug_symbols.py  dump_sample.py  export_statement_lines.py  extract_cibc.ps1  extract_hsbc.ps1  extract_rbc.ps1  extract_td.ps1  gemini_extract_samples.sh  local_review_server.py  normalize_gemini_override.py  rebuild_positions.ps1  run_daily_refresh.ps1
spec/: API-UI.md  ARCHITECTURE.md  CURRENT-STATE.md  DATA-MODEL.md  EXTRACTION-CORNER-CASES.md  INDEX.md  INGESTION.md  OPERATIONS.md  PARSER-CONTRACT.md  RECONCILIATION.md  USER-GUIDE.md
temp/: CIBC_Imperial_analysis.md  CIBC_Imperial_combined_prompt.txt  CIBC_Imperial_lines.json  CIBC_InvestDirect_analysis.md  CIBC_InvestDirect_combined_prompt.txt  CIBC_InvestDirect_lines.json  CIBC_TSFA_analysis.md  CIBC_TSFA_combined_prompt.txt  CIBC_TSFA_lines.json  HSBC_analysis.md  HSBC_combined_prompt.txt  HSBC_lines.json  RBC_analysis.md  RBC_combined_prompt.txt  RBC_lines.json  TD_analysis.md  TD_combined_prompt.txt  TD_lines.json  gemini_prompt.txt  run_gemini.py
tests/: db_fixtures.py  fixture_loader.py  test_api_workflows.py  test_asset_values.py  test_cibc.py  test_common_parser.py  test_extraction_audit.py  test_fund_lookup.py  test_gemini_overrides.py  test_holdings_service.py  test_hsbc.py  test_identity_resolution.py  test_ingest_activation.py  test_initials_monthly.py  test_instrument_identity.py  test_layout_enrichment.py  test_layout_provenance.py  test_name_resolver.py  test_parser_validation.py  test_positions.py  test_rbc.py  test_reconcile.py  test_reconciliation.py  test_reconciliation_results.py  test_refactor_acceptance.py  test_schema_migration.py  test_shadow_rebuild.py  test_statement_quality.py  test_statement_snapshots.py  test_symbol_overrides.py  test_td.py  test_ticker_changes.py
(+180 files in other folders)
