[project]
name = "trade-history"
version = "0.1.0"
description = "Trading history ingestion and performance dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.3.0",
  "fastapi>=0.118.0",
  "httpx>=0.28.1",
  "pdfplumber>=0.11.7",
  "PyJWT>=2.10.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "python-dateutil>=2.9.0.post0",
  "requests>=2.32.5",
  "rich>=14.1.0",
  "sqlalchemy>=2.0.43",
  "typer>=0.19.2",
  "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=6.3.0",
  "ruff>=0.13.0",
]

[project.scripts]
trade-history = "trade_history.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_history"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
