[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledger"
version = "0.1.0"
description = "Personal multi-broker trading ledger and analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "click>=8.1",
    "pydantic>=2.9",
    "duckdb>=1.1",
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "lxml>=6.1.0",
]

[project.scripts]
ledger = "ledger.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]

[tool.ruff]
line-length = 110
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
