[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-history"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pdfplumber>=0.11",
    "click>=8.1",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "duckdb>=1.1",
    "yfinance>=0.2",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "docling>=2.0",
    "langextract>=1.1",
]

[project.scripts]
trade-history = "trade_history.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trade_history"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
